--- a/css/main.css
+++ b/css/main.css
@@ -1,147 +1,99 @@
-* {
+*{
     user-select: none;
 }
-
-body {
-    background-image: url(../images/background.jpeg);
-    background-repeat: no-repeat;
+body{
+    background-image: url(/images/background.jpeg);
     background-size: cover;
+    background-repeat: no-repeat;
     background-attachment: fixed;
 }
-
-.main {
+.main{
     width: 500px;
     height: 500px;
-    border-radius: 5px;
-    box-shadow: 0 0 20px white;
     margin: 150px auto;
-    background-color: white;
-}
-
-.list {
-    top: -55px;
-    position: relative;
-    background-color: antiquewhite;
-    width: 141px;
-    height: 420px;
-    left: 10px;
-    border-radius: 10px;
-    transition: 0.5s;
-}
-
-.font {
-    position: relative;
-    top: 15px;
-    left: 45px;
-}
-
-.line01 {
-    position: relative;
-    background-color: rgba(169, 169, 169, 0.318);
-    width: 300px;
-    height: 120px;
+    background-color: aliceblue;
     border-radius: 5px;
-    top: -450px;
-    left: 180px;
-    transition: 0.5s;
 }
-
-.help {
+.TL{
     position: relative;
-    background-color: rgba(0, 0, 0, 0);
-    border: solid rgba(0, 0, 0, 0);
-    left: 23px;
     top: 20px;
-    cursor: pointer;
-    transition: 0.5s;
-    color: rgba(127, 126, 126, 0.706);
+    left: 55px;
+    font-weight: bold;
 }
-
-.updatelog {
+.title{
     position: relative;
+    top: -40px;
+    left: 220px;
+    color: rosybrown;
+    font-weight: bold;
+}
+.list{
+    position: relative;
+    width: 150px;
+    height: 425px;
+    top: -65px;
+    left: 15px;
+    border-radius: 5px;
+    background-color: antiquewhite;
+}
+.helps_updatelogs{
+    position: relative;
+    left: 37px;
+    top: 20px;
+    padding: 10px;
+    border: 0 solid;
     background-color: rgba(0, 0, 0, 0);
-    border: solid rgba(0, 0, 0, 0);
-    top: 30px;
-    left: 22px;
-    cursor: pointer;
     transition: 0.5s;
-    color: rgba(127, 126, 126, 0.706);
+    font-weight: bold;
 }
-
-.help:hover {
+.helps_updatelogs:hover{
+    cursor: pointer;
     color: red;
 }
-
-.updatelog:hover {
-    color: red;
-}
-
-.line01:hover {
-    box-shadow: 0 0 20px black;
-}
-
-.list:hover {
-    box-shadow: 0 0 10px red;
-}
-
-.api01_input {
+.list2{
     position: relative;
+    top: -470px;
+    left: 185px;
+    background-color: #ccc;
+    width: 300px;
+    height: 100px;
+    border-radius: 5px;
+}
+.input1{
+    position: relative;
+    border: 0 solid;
+    background-color: antiquewhite;
+    border-radius: 100px;
+    top: 10px;
+    left: 5px;
+    font-weight: bold;
+}
+.open1{
+    position: relative;
+    background-color: rosybrown;
+    color: aliceblue;
+    border: 0 solid;
+    border-radius: 5px;
+    transition: 0.5s;
+    top: 10px;
+    left: 7px;
+    font-weight: bold;
+}
+.open1:hover{
+    cursor: pointer;
+    color: aqua;
+}
+.line1{
+    position: relative;
+    top: -10px;
     left: 40px;
-    top: 20px;
-    border-radius: 10px;
-    border: solid 0.1px salmon;
+    color: rosybrown;
+    font-weight: bold;
 }
-
-.api01_button {
+.TLcopy{
     position: relative;
-    top: 27px;
-    left: 80px;
-    border-radius: 10px;
-    cursor: pointer;
-    border: solid 0.1px salmon;
-    transition: 0.5s;
-}
-
-.api01_button:hover {
-    background-color: black;
+    top: -210px;
+    left: 170px;
+    font-size: 130%;
     color: salmon;
-}
-
-.font2 {
-    position: relative;
-    top: 5px;
-    left: 113px;
-    color: darkorange;
-}
-
-.font3 {
-    position: relative;
-    left: 260px;
-    top: -42px;
-    color: darkorange   ;
-}
-
-.copy{
-    position: relative;
-    top: -232px;
-    left: 160px;
-    text-transform: uppercase;
-    -webkit-box-reflect: below 1px linear-gradient(transparent ,rgb(218, 218, 218));
-    animation: san 6s linear infinite;
-}
-
-@keyframes san{
-    0%,15%,50%,52%,70%,90%,99.1%{
-        color: salmon;
-        filter: blur(2px);
-    }
-    12%,15.1%,60%,70.1%,90.5%,100%{
-        color: salmon;
-        text-shadow: 0 0 5px salmon,
-        0 0 25px salmon,
-        0 0 35px salmon,
-        0 0 105px salmon,
-        0 0 155px salmon;
-        filter: blur(0px);
-    }
 }
