--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
     user-select: none;
 }
 body{
-    background-image: url(/images/background.jpeg);
+    background-image: url(../images/background.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
